#	$Id$	

Changelog for HylaFAX 4.3.1

* Add Motorola SM56 USB (Apple) modem (27 Sep 2006)
* Add HPUX 11.11 support to configure (27 Sep 2006)
* make cover pages visible in /docq/ through hfaxd (17 Sep 2006)
* handle +FHNG/+FNG after AT+FDT in Class 2 (15 Sep 2006)
* Unify mime encoding between notify and faxrcvd
* Add templates for use in faxrcvd translations (14 Aug 2006)
* don't exit faxq with assertion failure when a job times out and is
  interrupted during sending (21 Jul 2006)
* faxaddmodem: Allow identification when no AT+FMM? or AT+FMI? (21 Jul 2006)
* fix error of accepting too-short of DCS signal (20 Jul 2006)
* fix faxgetty hang in ECM due to missing timeouts (20 Jul 2006)
* fix indicator when 100% non-zero TCF data is received (20 Jul 2006)
* do Class1SwitchingCmd before sending MCF after PPS-NULL (20 Jul 2006)
* replace Class1SendMsgDelay with Class1SwitchingCmd (20 Jul 2006)
* fix faxaddmodem config parsing for Digicom Leonardo modems(19 Jul 2006)
* don't skip initial NSF bytes in station ID search when no
  known T.35 manufacturer ID was used (18 Jul 2006)
* Documentation updates (18 Jul 2006)
* Fix RecvFmt string printing (Bug 805) (18 Jul 2006)
* fix timeout on AT command sending to modem (5 Jul 2006)
* don't use tiffcp "-r" option on JBIG TIFFs (5 Jan 2006)
* Avoid problems when resending single ECM Frame (5 Jul 2005)
* Improve recovery after Class 1 TCF receipt times out (4 Jul 2006)
* Improve the handling of user aborts in Class 1 sending (4 Jul 2006)
* Add missing From: headers to notify (4 Jul 2006)
* correct CIELAB to be ITULAB (4 Jul 2006)
* fix Class 2 data format parsing of +FIS response (4 Jul 2006)
* Enhance faxinfo with formating options (2 Jul 2006)
* Fix faxmail's handling of nested mime (14 Jun 2006)
* Add JobProtection option to hfaxd (12 Jun 2006)
* Enhance SHIELDED_DTMF (5 Jun 2006)
* Add resubmit capability to faxalter (2 Jun 2006)
* Use ] && [ instead of -a for shell portability (2 Jun 2006)